--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
     <div class="wrapper">
         <main>
             <section class="module parallax parallax-1">
-                <h1>Escola Municipal Padre Natal Pigatto</h1>
+                <h1 class="area-1">Escola Municipal Padre Natal Pigatto</h1>
             </section>
         
         
             <section class="module content">
-                <div  class="container">
+                <div  class="container area-1">
                     <h1>Historia</h1>
                     <p>
                         Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é a mais antiga escola de Campo Largo e seu nome é em homenagem ao missionário italiano Natal Pigatto, que atuou na região entre 1895 e 1926. Ele é lembrado por sua importante contribuição à comunidade local e também nomeia uma importante avenida do município.
