--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@
                         Categorias
                         Educação  
                     </p>
+                    <img src="img/Captura de tela 2025-03-31 192629.png">
+                    <img src="img/Natale Pigatto.png"
 
                 </div>
                 
