--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/carrossel.css"
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -21,7 +22,7 @@
         <main>
             <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
                 <div class="container-fluid d-flex justify-content-center">
-                  <a class="navbar-brand mx-auto" href="#histórica">Inicio</a>
+                  <a class="navbar-brand mx-auto" href="">Inicio</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -31,7 +32,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Comunicados</a>
                           </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Historia</a>
+                        <a class="nav-link active" aria-current="page" href="#histórica">Historia</a>
                       </li>
                                             <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Contato</a>
@@ -65,8 +66,16 @@
                         Categorias
                         Educação  
                     </p>
-                    <img src="img/Captura de tela 2025-03-31 192629.png">
-                    <img src="img/Natale Pigatto.png"
+                    <div class="carrossel">
+                        <div class="slides">
+                            <img src="img/alunos.png" alt="1">
+                            <img src="img/Natale Pigatto.png" alt="2">
+                            <img src="img/Paróquia.png" alt="3">
+                            <img src="img/enterrado.png" alt="4">
+                        </div>
+
+                    </div>
+
 
                 </div>
                 
