--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
   <!-- Fecha wrapper. -->
   </div>
 
-  <!-- Importando script. -->
+  <!-- Importando script. bury -->
   <script src="scripts/home.js"></script>
 </body>
 </html>
