Adicionado animação no container.

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
       <!-- Sessão história. -->
       <section id="histórica" class="module content">
-        <div class="container-area-1">
+        <div id="histórica-container" class="container area-1">
           <h1>História</h1>
           <p style="text-align: justify;">
             Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é a mais antiga escola de Campo Largo e seu nome é em homenagem ao missionário italiano Natal Pigatto, que atuou na região entre 1895 e 1926. Ele é lembrado por sua importante contribuição à comunidade local e também nomeia uma importante avenida do município.
