--- a/public/index.html
+++ b/public/index.html
@@ -1,87 +1,108 @@
-<!-- Index. -->
+<!-- ================================================== -->
+
+<!-- HTML. -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<!-- Head. -->
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/carrossel.css">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Escola Municipal Padre Natal Pigatto</title>
-</head>
+    <!-- ================================================== -->
 
-<!-- Body. -->
-<body>
-  <div class="wrapper">
-    <main>
+    <!-- Styles. -->
+    <style>
+        @keyframes fade-in {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
 
-      <!-- Navbar. -->
-      <nav style="background-color: rgb(73, 69, 64);" class="navbar navbar-expand-lg fixed-top">
-        <div style="background-color: rgb(73, 69, 64);" class="container-fluid d-flex justify-content-center">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a style="color: rgb(255, 255, 255);" class="nav-link active" aria-current="page" href="#">Comunicados</a>
-              </li>
-              <li class="nav-item">
-                <a style="color: rgb(255, 255, 255);" class="nav-link active" aria-current="page" href="#histórica">Historia</a>
-              </li>
-              <li class="nav-item">
-                <a style="color: rgb(255, 255, 255);" class="nav-link active" aria-current="page" href="#">Contato</a>
-              </li>
-              <li class="nav-item">
-                <a style="color: rgb(255, 255, 255);" class="nav-link active" aria-current="page" href="#">Equipe</a>
-              </li>
-              <li class="nav-item">
-                <a style="color: rgb(255, 255, 255);" class="nav-link active" aria-current="page" href="#">Contato</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        .animate-fade-in {
+            animation: fade-in 2s ease-out;
+        }
+    </style>
 
-      <!-- Sessão com paralax. -->
-      <section class="module parallax parallax-1">
-        <h1 class="area-1">Escola Municipal Padre Natal Pigatto</h1>
-      </section>
+    <!-- ================================================== -->
 
-      <!-- Sessão história. -->
-      <div class="blur">
-        <section id="histórica" class="module content">
-          <div id="histórica-container" class="container area-1">
-            <h1>História</h1>
-            <p style="text-align: justify;">
-              Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é a mais antiga escola de Campo Largo e seu nome é em homenagem ao missionário italiano Natal Pigatto, que atuou na região entre 1895 e 1926. Ele é lembrado por sua importante contribuição à comunidade local e também nomeia uma importante avenida do município.
-              Em visita à obra, o prefeito Maurício Rivabem destacou o grande passo para os estudantes da região e comemorou o progresso da obra: “Esse sonho já está saindo do papel e logo estaremos recebendo nossos alunos aqui. As nossas crianças merecem um ambiente acolhedor e inclusivo”.
-              Categorias
-              Educação  
-            </p>
-            <div class="carrossel">
-              <div class="slides">
-                <img src="img/alunos.png" alt="1">
-                <img src="img/Natale Pigatto.png" alt="2">
-                <img src="img/Paróquia.png" alt="3">
-                <img src="img/enterrado.png" alt="4">
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
+    <!-- Header. -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Escola</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+    </head>
 
-    <!-- Fecha main. -->
-    </main>
+    <!-- ================================================== -->
 
-  <!-- Fecha wrapper. -->
-  </div>
+    <!-- Body. -->
+    <body class="scroll-smooth">
 
-  <!-- Importando script. bury -->
-  <script src="scripts/home.js"></script>
-</body>
+        <!-- ================================================== -->
+
+        <!-- Navbar -->
+        <header class="fixed top-0 w-full bg-white shadow z-50">
+            <nav class="flex justify-around p-4">
+                <a href="#historia" class="hover:text-blue-500">História</a>
+                <a href="#equipe" class="hover:text-blue-500">Equipe</a>
+                <a href="#contato" class="hover:text-blue-500">Contato</a>
+            </nav>
+        </header>
+
+        <!-- ================================================== -->
+
+        <!-- Sessões. -->
+        <main class="pt-14">
+
+            <!-- ================================================== -->
+
+            <!-- Início. -->
+            <section id="inicio" class="relative min-h-screen bg-cover bg-center" style="background-image: url('images/escola.jpg');">
+                <div class="absolute inset-0 bg-black bg-opacity-60"></div>
+                <div class="relative z-10 flex items-center justify-center h-full">
+                    <h1 class="text-white text-4xl md:text-6xl font-bold animate-fade-in">
+                        Escola Municipal Padre Natal Pigatto
+                    </h1>
+                </div>
+            </section>
+
+            <!-- ================================================== -->
+
+            <!-- História da escola. -->
+            <section id="historia" class="min-h-screen p-8 bg-gray-100">
+                <h1 class="text-3xl font-bold mb-4">Nossa História</h1>
+                <p>Texto da história...</p>
+            </section>
+
+            <!-- ================================================== -->
+
+            <!-- Equipe. -->
+            <section id="equipe" class="min-h-screen p-8 bg-white">
+                <h1 class="text-3xl font-bold mb-4">Equipe</h1>
+                <p>Texto sobre a equipe...</p>
+            </section>
+
+            <!-- ================================================== -->
+
+            <!-- Contato. -->
+            <section id="contato" class="min-h-screen p-8 bg-gray-100">
+                <h1 class="text-3xl font-bold mb-4">Contato</h1>
+                <form class="flex flex-col gap-4">
+                    <input type="text" placeholder="Nome" class="p-2 border rounded" />
+                    <input type="email" placeholder="Email" class="p-2 border rounded" />
+                    <textarea placeholder="Mensagem" class="p-2 border rounded"></textarea>
+                    <button type="submit" class="bg-blue-500 text-white py-2 rounded hover:bg-blue-600">Enviar</button>
+                </form>
+            </section>
+
+            <!-- ================================================== -->
+
+        <!-- Fecha sessões. -->
+        </main>
+
+        <!-- ================================================== -->
+
+    <!-- Fecha o Body. -->
+    </body>
+
+    <!-- ================================================== -->
+
+<!-- Fecha o HTML. -->
 </html>
+
+<!-- ================================================== -->
