Adicionado icone do Instagram.

--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,10 @@
             <!-- Contato. -->
             <section id="contato" class="scroll-mt-12 min-h-screen p-8 bg-gray-200">
                 <h1 class="titulo-contato text-3xl font-bold mb-4 opacity-0">Contato 📞</h1>
-                <a class="links" href="https://www.instagram.com/pigattonatal/"><strong>Instagram</strong></a>
+                <a href="https://www.instagram.com/pigattonatal/" class="links flex gap-1 items-center">
+                    <img src="images/instagram_icon.png" class="w-7">
+                    <strong>Instagram</strong>
+                </a>
             </section>
 
             <!-- ================================================== -->
