Postagens agora são injetadas de forma dinâmica.

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 
                             <!-- ================================================== -->
 
-                            <!-- Aqui irão os comunicados serão injetados de forma dinâmica. -->
+                            <!-- Aqui os comunicados serão injetados de forma dinâmica. -->
 
                             <!-- ================================================== -->
 
@@ -95,7 +95,20 @@
             <!-- Postagens. -->
             <section id="postagens" class="scroll-mt-12 min-h-screen p-8 bg-gray-200">
                 <h1 class="titulo-postagens text-3xl font-bold mb-4 opacity-0">Postagens 🤳</h1>
-                <!-- Aqui irão as postagens serão injetadas de forma dinâmica. -->
+                <div class="postagens-carrousel opacity-0">
+                    <div class="swiper postagens-swiper mt-6">
+                        <div class="swiper-wrapper">
+
+                            <!-- ================================================== -->
+
+                            <!-- Aqui as postagens serão injetadas de forma dinâmica. -->
+
+                            <!-- ================================================== -->
+
+                        </div>
+                        <div class="swiper-pagination mt-4"></div>
+                    </div>
+                </div>
             </section>
 
             <!-- ================================================== -->
