Personalizado as páginas de login e post.

--- a/public/pages/admin/login.html
+++ b/public/pages/admin/login.html
@@ -30,7 +30,6 @@
           <label for="senha">Senha</label>
           <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required />
         </div>
-        <a href="#" class="forgot-password">Esqueci a senha</a>
         <div class="mt-4">
           <button type="submit" id="login-btn" class="btn btn-login w-100">Entrar</button>
         </div>
@@ -48,14 +47,14 @@
 particlesJS("particles-js", {
   "particles": {
     "number": { "value": 200, "density": { "enable": true, "value_area": 800 } },
-    "color": { "value": "#1e3a8a" },
+    "color": { "value": "#ff375a" },
     "shape": { "type": "circle" },
     "opacity": { "value": 0.4 },
     "size": { "value": 3, "random": true },
     "line_linked": {
       "enable": true,
       "distance": 130,
-      "color": "#1e3a8a",
+      "color": "#ff9baf",
       "opacity": 0.3,
       "width": 1
     },
