--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
                             <!-- Professor 1. -->
                             <div class="swiper-slide flex justify-center">
                                 <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[30rem] flex flex-col items-center text-center">
-                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(225,55,90)] shadow mb-6">
+                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(255,155,175)] shadow mb-6">
                                     <h3 class="font-semibold text-xl">Prof. 1</h3>
                                     <p class="text-base text-gray-600 mt-2">
                                         Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é 
@@ -141,7 +141,7 @@
                             <!-- Professor 2. -->
                             <div class="swiper-slide flex justify-center">
                                 <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[30rem] flex flex-col items-center text-center">
-                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(225,55,90)] shadow mb-6">
+                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(255,155,175)] shadow mb-6">
                                     <h3 class="font-semibold text-xl">Prof. 2</h3>
                                     <p class="text-base text-gray-600 mt-2">
                                         Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é 
@@ -187,22 +187,22 @@
                     <div class="swiper historia-swiper mt-6">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="images/index_historia_1.jpg" class="rounded shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_1.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_2.jpg" class="rounded shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_2.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_3.jpg" class="rounded shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_3.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_4.jpg" class="rounded shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_4.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_5.jpg" class="rounded shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_5.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_6.jpg" class="rounded shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_6.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                         </div>
                         <div class="swiper-pagination mt-4"></div>
