mano que doideira

--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -219,6 +219,7 @@
       "retina_detect": true
     });
     </script>
+    <script type="module" src="../../scripts/admin/post.js"></script>
 
 </body>
 </html>
