--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -10,6 +10,7 @@
 
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <style>
     html, body {
@@ -145,6 +146,14 @@
       <!-- Botão -->
       <button type="submit" class="btn btn-success shadow mt-3 animate__animated animate__pulse animate__infinite">Postar</button>
     </form>
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+      <div id="toastFeedback" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+          <div class="toast-body" id="toastMensagem">Postagem criada com sucesso!</div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Fechar"></button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Scripts -->
@@ -220,6 +229,7 @@
     });
     </script>
     <script type="module" src="../../scripts/admin/post.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
