Criado calendário para os comunicados.

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,10 @@
         <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
         <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore-compat.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
         <link href="styles/index.css" rel="stylesheet">
     </head>
 
@@ -74,20 +76,7 @@
             <!-- Comunicados. -->
             <section id="comunicados" class="scroll-mt-12 min-h-screen p-8 bg-gray-200">
                 <h1 class="titulo-comunicados text-3xl font-bold mb-4 opacity-0">Comunicados 📢</h1>
-                <div class="comunicados-carrousel opacity-0">
-                    <div class="swiper comunicados-swiper mt-6">
-                        <div class="swiper-wrapper">
-
-                            <!-- ================================================== -->
-
-                            <!-- Aqui os comunicados serão injetados de forma dinâmica. -->
-
-                            <!-- ================================================== -->
-
-                        </div>
-                        <div class="swiper-pagination mt-4"></div>
-                    </div>
-                </div>
+                <div id="calendario" class="calendario-comunicados opacity-0 w-full max-w-[95vw] sm:max-w-5xl mx-auto mt-12 px-2 sm:px-0"></div>
             </section>
 
             <!-- ================================================== -->
@@ -125,7 +114,7 @@
                             <!-- Professor 1. -->
                             <div class="swiper-slide flex justify-center">
                                 <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[30rem] flex flex-col items-center text-center">
-                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(255,155,175)] shadow mb-6">
+                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(155,182,255)] shadow mb-6">
                                     <h3 class="font-semibold text-xl">Prof. 1</h3>
                                     <p class="text-base text-gray-600 mt-2">
                                         Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é 
@@ -141,7 +130,7 @@
                             <!-- Professor 2. -->
                             <div class="swiper-slide flex justify-center">
                                 <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[30rem] flex flex-col items-center text-center">
-                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(255,155,175)] shadow mb-6">
+                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(155,182,255)] shadow mb-6">
                                     <h3 class="font-semibold text-xl">Prof. 2</h3>
                                     <p class="text-base text-gray-600 mt-2">
                                         Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é 
@@ -187,22 +176,22 @@
                     <div class="swiper historia-swiper mt-6">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="images/index_historia_1.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_1.jpg" class="rounded border-4 border-[rgb(155,182,255)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_2.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_2.jpg" class="rounded border-4 border-[rgb(155,182,255)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_3.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_3.jpg" class="rounded border-4 border-[rgb(155,182,255)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_4.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_4.jpg" class="rounded border-4 border-[rgb(155,182,255)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_5.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_5.jpg" class="rounded border-4 border-[rgb(155,182,255)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/index_historia_6.jpg" class="rounded border-4 border-[rgb(255,155,175)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
+                                <img src="images/index_historia_6.jpg" class="rounded border-4 border-[rgb(155,182,255)] bg-white shadow-lg w-full sm:h-72 md:h-80 lg:h-96 xl:h-[40rem] object-contain">
                             </div>
                         </div>
                         <div class="swiper-pagination mt-4"></div>
@@ -214,6 +203,27 @@
 
         <!-- Fecha sessões. -->
         </main>
+
+        <!-- ================================================== -->
+
+        <!-- Modal de comunicados. -->
+        <div id="modalComunicado" class="fixed inset-0 z-50 bg-black/50 hidden">
+            <div class="flex items-center justify-center w-full h-full p-4">
+                <div class="bg-white rounded-xl max-w-4xl w-full p-6 max-h-[90vh] overflow-y-auto relative shadow-lg">
+                    <button onclick="document.getElementById('modalComunicado').classList.add('hidden')" class="absolute top-2 right-3 text-gray-500 hover:text-black text-2xl">&times;</button>
+                    <h2 id="modalTitulo" class="text-2xl font-bold mb-4"></h2>
+                    <div id="modalImagens" class="space-y-6"></div>
+                </div>
+            </div>
+        </div>
+        <div id="comunicadoModal" class="fixed inset-0 bg-black bg-opacity-50 items-center justify-center z-50 hidden">
+            <div class="flex items-center justify-center w-full h-full p-4">
+                <div class="bg-white rounded-xl shadow-xl p-6 w-11/12 max-w-2xl relative">
+                    <button onclick="document.getElementById('comunicadoModal').classList.add('hidden')" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">&times;</button>
+                    <div id="comunicadoModalContent"></div>
+                </div>
+            </div>
+        </div>
 
         <!-- ================================================== -->
 
