Adicionado botão para ir à sessão administrativa.

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
                 <a href="#historia" class="nav-bar-links text-xs sm:text-sm">
                     <strong>História <span class="sm:inline">📖</span></strong>
                 </a>
+                <a href="./pages/login.html" class="nav-bar-links text-xs sm:text-sm">
+                    <strong>Adm <span class="sm:inline">🔵</span></strong>
+                </a>
             </nav>
         </header>
 
