--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                 <a href="#historia" class="nav-bar-links text-xs sm:text-sm">
                     <strong>História <span class="sm:inline">📖</span></strong>
                 </a>
-                <a href="./pages/login.html" class="nav-bar-links text-xs sm:text-sm">
+                <a href="./pages/admin/login.html" class="nav-bar-links text-xs sm:text-sm">
                     <strong>Adm <span class="sm:inline">🔵</span></strong>
                 </a>
             </nav>
